# ramsey_numbers

./: .gitignore  .gitmodules  Cargo.toml  README.md  makefile
py_renderg/: bitStrings.py  data.json  main.py
rs_calcg/: Cargo.toml  main.s  simd.s
rs_calcg/benches/: ramsey.rs
rs_calcg/examples/: ramsey.rs
rs_calcg/src/: brute_force.rs  cliques.rs  graph.rs  graphe.rs  kgraphrbe.rs  lib.rs  main.rs  math.rs  ramsey.rs  random_tests.rs  simd.rs
rs_calcg/tests/: algorithms.rs  ramsey_cases.rs
simd/: Cargo.toml
simd/src/: lib.rs
