[package]
name = "rs_calcg"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronaldaron@gmail.com>"]
edition = "2018"

[dependencies]
simd = { path = "../simd" }
rayon = "1.0"

[dev-dependencies]
criterion = "0.2"

[features]
default = ["simd/use-simd"]
use-simd = []

[[bench]]
name = "ramsey"
harness = false

[profile.release]
opt-level = 2
